--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ footer {
     padding: 1rem 3rem;
     display: flex;
     flex-direction: column;
+    gap: 6em;
    
 }
 
@@ -125,4 +126,23 @@ button {
     font-weight: 900;
     padding: 28px 0;
     
+}
+
+.container {
+    display: flex;
+    text-align: center;
+    gap: 2.5em;
+    padding: 1em;
+    margin-bottom: 6em;
+}
+
+.box {
+    height: 150px;
+    width: 150px;
+    border:2px  solid #3882f6 ;
+    border-radius: 10px;
+}
+
+.inf {
+    width: 150px;
 }
