--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ button {
 .info {
     display: flex;
     align-self: center;
-    flex: 3;
     width: 90%;
 }
 
@@ -139,10 +138,35 @@ button {
 .box {
     height: 150px;
     width: 150px;
-    border:2px  solid #3882f6 ;
+    border:4px  solid #3882f6 ;
     border-radius: 10px;
 }
 
 .inf {
     width: 150px;
 }
+
+.quote-section {
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1f2937;
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+}
+
+.center-content {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    text-align: left;
+}
+
+.center-content :nth-child(2) {
+    font-weight: bold;
+    margin-left: auto;
+    margin-top: 1em;
+}
+
