--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ button {
 .quote-section {
     background-color: #e5e7eb;
     font-size: 36px;
-    font-weight: 300;
+    font-weight: lighter;
     font-style: italic;
     color: #1f2937;
     padding: 2em;
