style: add flexbox layout for footer

--- a/style.css
+++ b/style.css
@@ -201,3 +201,9 @@ button {
     font-weight: bold;
 }
 
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
