--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ footer {
 }
 
 .header {
-    padding: 1rem 3rem;
+    padding: 1rem 3rem 6rem;
     display: flex;
     flex-direction: column;
     gap: 6em;
+
    
 }
 
